# agent-ready

./: README.md  agent_ready.py  pyproject.toml
.github/workflows/: publish.yml
